modules/apps/data-engine/data-engine-js-components-web/src/main/resources/META-INF/resources/css/main.scss
@import 'atlas-variables';

@import 'date-picker';
@import 'field-type-checkbox-switch';
@import 'image_picker';
@import 'utilities';

%flex-space-between {
	align-items: center;
	display: flex;
	justify-content: space-between;
}

%text-ellipsis {
	text-overflow: ellipsis;
	white-space: nowrap;
}

.ddm-btn-cancel {
	margin-right: 7px;
}

.ddm-btn-full button {
	width: 100%;
}

.ddm-form-builder-app {
	.lfr-ddm-form-page {
		> .row {
			margin-left: 20px;
			margin-right: 20px;
		}
	}
}

.ddm-form-builder-app.ddm-form-builder-app-not-ready {
	opacity: 0.5;
	pointer-events: none;
}

.input-group-inset-item {
	height: auto;
}

.ddm-field-container {
	padding: 0 12px;
}

body .ddm-user-view-content {
	.ddm-geolocation {
		position: relative;
		z-index: 0;
	}

	.liferay-ddm-form-renderer-wizard {
		padding: 40px 34px 31px;
	}

	.multi-step-item.active .multi-step-divider {
		background-color: #1865fb;
	}

	.multi-step-indicator-label {
		margin-top: -28px;
	}

	.form-group {
		.form-check-inline {
			margin-right: 16px;
		}

		.custom-control-inline + .custom-control-inline {
			margin-left: 16px;
		}
	}
}

.form-control {
	@extend %text-ellipsis;
}

.portlet-forms .ddm-form-basic-info .ddm-form-name {
	color: #000;
	font-weight: 500;
	margin-top: 40px;
	padding: 0;
}

.lfr-ddm-form-field-container label,
.lfr-ddm-form-field-container legend,
.lfr-ddm-form-field-container p {
	padding-right: 40px;
}

.lfr-ddm-form-container {
	word-break: normal;

	.form-control-feedback {
		margin-left: -20px;
	}

	.icon-angle-left {
		font-size: inherit;
	}

	.input-group-addon .form-control-feedback {
		left: -18px;
	}

	.required-warning {
		margin-bottom: 25px;
		padding-left: 32px;

		.icon-asterisk {
			margin-left: 4px;
		}
	}

	.select-arrow-down-container:focus {
		outline: none;
	}

	.lfr-ddm-form-field-container {
		position: relative;

		&.has-error .liferay-ddm-form-field-date .input-group-addon {
			border-width: 0 0 2px;
		}

		@keyframes spin {
			100% {
				transform: rotate(359deg);
			}
		}

		.icon-asterisk {
			margin-left: 4px;
		}

		.lfr-ddm-form-field-repeatable-add-button {
			position: absolute;
			right: 0;
			top: 0;
		}

		.lfr-ddm-form-field-repeatable-delete-button {
			position: absolute;
			right: 15px;
			top: 0;
		}

		.liferay-ddm-form-field-date .input-group-addon {
			cursor: pointer;
		}

		select.form-control[multiple] {
			height: auto;
		}

		textarea {
			overflow-y: hidden;
		}
	}

	.lfr-ddm-form-page {
		display: none;
		padding: 0;

		&.active {
			display: block;
		}
	}

	.lfr-ddm-form-page-description {
		margin-bottom: 23px;
	}

	.lfr-ddm-form-page-title + .required-warning {
		margin-top: 0;
	}

	.lfr-ddm-form-page-title + .row {
		margin-top: 40px;
	}

	.lfr-ddm-form-pagination-controls {
		padding-left: 12px;
		padding-right: 12px;
		padding-top: 20px;

		button {
			margin-bottom: 20px;
		}

		.lfr-ddm-form-pagination-prev {
			margin-right: 16px;
		}
	}

	.row {
		min-height: auto;

		.col-ddm {
			min-width: 25%;
		}
	}

	.has-error {
		.liferay-ddm-form-field-grid.table-responsive {
			margin-bottom: 0;
		}

		select.form-control[multiple] {
			background-image: none;
		}

		td,
		th {
			color: #da1414;
		}
	}

	.lfr-ddm-form-field-repeatable-toolbar a {
		color: #65b6f0;
		text-decoration: none;

		&:hover {
			text-decoration: none;
		}
	}
}

.lfr-de__partial-results--background {
	.ddm-form-builder-app {
		margin-top: 0;
		padding-bottom: 25px;
		padding-top: 28px;
	}
}

.liferay-ddm-form-field-checkbox .checkbox {
	margin-bottom: 2px;
}

.liferay-ddm-form-field-document-library {
	a {
		display: inline-block;
	}

	.clear-button-upload {
		border-bottom-left-radius: 0;
		border-top-left-radius: 0;
	}

	.clear-button-upload-on {
		border-bottom-right-radius: 0;
		border-top-right-radius: 0;
	}

	.input-file {
		height: 0.1px;
		opacity: 0;
		overflow: hidden;
		position: absolute;
		width: 0.1px;
		z-index: -1;
	}
}

.liferay-ddm-form-field-paragraph {
	color: #272833;
	font-size: 14px;
	line-height: 16px;
}

.liferay-ddm-form-field-tip {
	color: #5b7b86;
	line-height: 16px;
}

.liferay-ddm-form-field-options .form-control-feedback {
	margin-left: 0;

	[class^='icon'] {
		display: none;
	}
}

.liferay-ddm-form-field-tip {
	font-size: 11px;
	font-weight: normal;
}

.liferay-ddm-form-field-grid {
	.table {
		margin-bottom: 0.1rem;
	}

	&.table-responsive {
		margin-bottom: 0;
	}

	th,
	td:not(:first-child) {
		text-align: center;
	}
}

.radio-options {
	.radio-inline {
		span {
			display: inline-block;
			height: 28px;
		}
	}
}

.multi-step-progress-bar {
	> .complete {
		color: #65b6f0;

		.divider {
			background-color: #65b6f0;
		}
	}
}

.portal-popup {
	padding: 0;

	&.open {
		padding: 0;
	}
}

.form-builder-layout {
	.input-group .form-control {
		z-index: initial;
	}
}

.form-builder-select-field {
	position: relative;

	.option-selected-placeholder {
		color: #6a6c7d;
	}

	.dropdown-menu {
		display: block;
		max-width: inherit;
		min-width: 0;
		overflow: hidden;
		width: 100%;

		.dropdown-section,
		.dropdown-item,
		.no-results-list {
			padding: 0.5rem 1rem;
		}

		.placeholder-dropdown-item {
			color: #a7a9bc;

			&:hover {
				color: #a7a9bc;
			}
		}

		.custom-control {
			padding-bottom: 0;
		}
	}

	.select-arrow-down-container {
		color: #6b6c7e;
	}

	.search-chosen {
		border-bottom: 1px solid #e4e9ec;
		position: relative;
	}

	.select-search-container {
		left: 8px;
		position: absolute;
		top: 2px;

		a {
			color: #869cad;
		}
	}

	&.active .select-field-trigger {
		border-bottom: 2px solid #65b6f0;
	}

	.form-control {
		margin-bottom: 0;
	}

	.form-control[disabled] > a.select-arrow-down-container {
		cursor: not-allowed;
		opacity: 0.5;
	}

	.form-control[disabled]:focus {
		border-bottom: 2px solid #869cad;
		text-decoration: none;
	}

	.select-field-trigger {
		@extend %flex-space-between;
		height: inherit;

		.option-selected {
			@extend %text-ellipsis;
			overflow: hidden;
		}
	}

	.drop-chosen {
		background-color: #fff;
		border-radius: 0 0 4px 4px;
		box-shadow: 0 2px 14px 0 rgba(58, 75, 87, 0.1);
		left: 0;
		position: absolute;
		right: 0;
		z-index: 1010;

		.dropdown-visible {
			display: block;
		}

		.results-chosen {
			margin: 0;
			min-width: 100%;
			overflow-x: hidden;
			overflow-y: auto;
			padding: 0;

			.inline-scroller > span {
				padding-left: 16px;
			}
		}
	}

	.multiple-label-list {
		display: flex;
		flex-flow: row;
		flex-wrap: wrap;
		justify-content: flex-start;
		list-style: none;
		margin: 0;
		padding-right: 20px;
		width: auto;
		word-break: break-all;

		li {
			overflow: hidden;
		}

		span.label-secondary {
			max-width: 200px;
		}

		.multiple-label {
			@extend %text-ellipsis;
			margin-bottom: 4px;
			margin-right: 6px;
			margin-top: 0;
			overflow: hidden;
			padding-right: 20px;
			position: relative;

			a {
				font-size: 6px;
				position: absolute;
				right: 5px;
				top: 1px;

				.icon-monospaced.lexicon-icon {
					margin-bottom: 1px;
					margin-left: 5px;
					padding: 0;
				}
			}
		}
	}
}

.lfr-ddm-form-page-description,
.lfr-ddm-form-page-title {
	padding-left: 8px;
	padding-right: 32px;
}

.lfr-ddm-form-paginated .pagination {
	justify-content: center;
	padding-bottom: 30px;
}

.lfr-ddm-form-field-repeatable-toolbar {
	.ddm-form-field-repeatable-add-button,
	.ddm-form-field-repeatable-delete-button {
		border-radius: 10px !important;
		height: 18px;
		padding: 2px !important;
		position: absolute;
		width: 18px;

		.lexicon-icon {
			height: 10px;
			margin-bottom: 7px;
			margin-top: 0;
		}

		.lexicon-icon-hr {
			width: 8px;
		}

		.lexicon-icon-plus {
			width: 10px;
		}
	}

	.ddm-form-field-repeatable-delete-button {
		margin-right: 4px !important;
		right: 26px;
	}

	.ddm-form-field-repeatable-add-button {
		right: 8px;
	}
}

.liferay-ddm-form-field-fieldset {
	margin-bottom: 0 !important;

	.lfr-ddm-form-field-container .liferay-ddm-form-field-checkbox {
		margin-top: 21px;
	}

	&.border-bottom {
		margin-bottom: 50px !important;
	}

	fieldset {
		border: 1px solid rgba(134, 156, 173, 0.4);
		border-bottom-width: 0;
		border-top-width: 0;
		padding: 10px 10px 0;

		& > div {
			margin-bottom: 0;
			padding-left: 0;

			div div.form-group {
				margin-bottom: 20px !important;
			}
		}

		legend {
			border-width: 0;
			color: #869cad;
			font-size: 12px;
			font-weight: bold;
			line-height: 20px;
			margin: 0;
			padding: 0 8px;
			position: relative;
			text-transform: uppercase;
			width: auto;
		}
	}
}

.liferay-ddm-form-renderer-pagination-content {
	a {
		pointer-events: none;
	}
}

.form-check-inline .custom-control-label {
	line-height: 24px;
}

.liferay-ddm-form-builder-sidebar-content {
	label,
	legend,
	p {
		padding-right: 0;
	}
}

.liferay-ddm-form-field-radio {
	.custom-control-inline {
		&.custom-control {
			padding-bottom: 0;
		}

		+ .custom-control-inline {
			margin-left: 11px;
		}
	}
}

.liferay-ddm-form-field-checkbox-multiple {
	.custom-control {
		padding-bottom: 9px;
	}

	.form-check-inline {
		margin-right: 11px;
	}
}

.liferay-ddm-form-field-localizable-text {
	.custom-dropdown-menu {
		max-width: 340px !important;
		width: 100% !important;
	}

	.custom-dropdown-item-row {
		display: flex;
	}
}

.ddm-empty {
	display: inline-block;
}

.ddm-label-required {
	padding-left: 4px;
}

.ddm-row:first-child {
	margin-top: 1rem;
}

.ddm-tooltip {
	color: #a7a9bc;
	display: inline-block;
	padding-left: 4px;
}

div.ddm-tooltip-container {
	opacity: 1;
	position: absolute;
	visibility: visible;
	width: 230px;

	&.clay-tooltip-bottom {
		margin-left: 108px;
	}
}

p.ddm-label {
	color: #272833;
	cursor: default;
	display: inline-block;
	font-size: 0.875rem;
	font-weight: 600;
	margin-bottom: 0.25rem;
	max-width: 100%;
	word-wrap: break-word;
}

legend .reference-mark,
p .reference-mark {
	color: #b95000;
	font-size: 6px;
	margin: 4px 0 32px;
	padding-left: 8px;
	padding-right: 4px;
}

